<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:id="@+id/svFolderNameToDownload_ScrollView">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:paddingStart="24dp"
		android:paddingEnd="24dp"
		android:paddingTop="24dp"
		android:paddingBottom="5dp">

		<TextView
			android:id="@+id/tvFolderNameToDownLoad_DownloadPath"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#000000"/>

		<EditText
			android:id="@+id/edFolderNameToDownload_FolderName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:ems="10"
			android:hint="@string/edittext_folder_name"
			android:maxLines="1"
			android:textColor="?attr/colorAccent"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="5dp"
			android:id="@+id/cbFolderNameToDownload_DownloadInRange"
			android:text="@string/checkbox_download_in_range"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="vertical"
			android:id="@+id/llFolderNameToDownload_LayoutOfRange">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="center">

				<EditText
					android:id="@+id/edFolderNameToDownload_RangeStart"
					android:layout_width="65dp"
					android:layout_height="wrap_content"
					android:ems="10"
					android:maxLines="1"
					android:maxLength="4"
					android:inputType="number"
					android:textColor="?attr/colorAccent"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="5dp"
					android:text="-"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#000000"
					android:textStyle="bold"/>

				<EditText
					android:id="@+id/edFolderNameToDownload_RangeEnd"
					android:layout_width="65dp"
					android:layout_height="wrap_content"
					android:ems="10"
					android:maxLines="1"
					android:maxLength="4"
					android:inputType="number"
					android:textColor="?attr/colorAccent"/>

			</LinearLayout>

			<TextView
				android:id="@+id/tvFolderNameToDownLoad_DownloadInRangeMessage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="7dp"
				android:text="@string/textview_download_in_range"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#000000"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="10dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btFolderNameToDownload_Cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:text="@string/button_cancel"/>

			<Button
				android:id="@+id/btFolderNameToDownload_Ok"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="?android:attr/buttonBarButtonStyle"
				android:text="Ok"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>

